fixed menu overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 @font-face {
   font-family: "Typewriter";
   src: url("./assets/fonts/typewcond_regular.otf");
